Add embedded DNS records UI
